# SHARK-Platform

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  compare_sharktank_to_hf_safetensors.py  concurr_test.py  get_names_in_safetensors.py  index.html  index.md  llama-report.html  perplexity_torch.html  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-dev.txt  requirements.txt  setup.py  test_perplexity.py  tuner-requirements.txt  turbine-requirements.txt  version_info.json
libshortfin/: .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-tests.txt  setup.py
libshortfin/bindings/python/: CMakeLists.txt  array_binding.cc  lib_ext.cc  lib_ext.h  utils.h
libshortfin/build_tools/: python_lsan_suppressions.txt
libshortfin/build_tools/cmake/: shortfin_library.cmake
libshortfin/docs/: conf.py  index.rst  reference.rst
libshortfin/examples/python/: basic_asyncio.py  device_sync.py  process.py
libshortfin/python/: CMakeLists.txt  array_binding.cc  array_host_ops.cc  lib_ext.cc  lib_ext.h  utils.h
libshortfin/python/_shortfin/: __init__.py  asyncio_bridge.py
libshortfin/python/shortfin/: __init__.py  array.py  host.py
libshortfin/src/: CMakeLists.txt
libshortfin/src/shortfin/: CMakeLists.txt  globals.cc  local_device.cc  local_device.h  local_scope.cc  local_scope.h  local_system.cc  local_system.h  worker.cc
libshortfin/tests/: amdgpu_system_test.py  array_test.py  conftest.py  examples_test.py  host_cpu_system_test.py  local_scope_test.py  smoke_test.py
libshortfin/tests/api/: array_ops.py  array_ops_test.py  array_storage_test.py  array_test.py
libshortfin/tests/examples/: async_test.py  fastapi_test.py
libshortfin/tests/invocation/: mobilenet_program_test.py
packaging/shark-platform/: pyproject.toml  setup.py
shark-ai/: .gitignore  README.md  pyproject.toml  setup.py
shark-ai/build_tools/: build_linux_package.sh
sharktank/: .gitignore  README.md  conftest.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.py
sharktank/build_tools/: build_linux_package.sh
sharktank/sharktank/: __init__.py  export.py
sharktank/sharktank/evaluate/: README.md  perplexity.py  perplexity_iree.py  perplexity_prefill.py  perplexity_torch.py  perplexity_vmfb.py
sharktank/sharktank/examples/: .export_paged_llm_v1.py.swp  export_direct_cache_attention.py  export_direct_cache_llama.py  export_paged_cache_attention.py  export_paged_llm_v1.py  hf_llama.py  paged_llm_v1.py  test_llama.py  validate_direct_llama_model.py  validate_direct_mixtral_model.py  validate_llama_ref_model.py  validate_mixtral_ref_model.py  validate_paged_llama_model.py
sharktank/sharktank/export_layer/: export_kv_cache.py  export_moe.py  export_paged_attention.py
sharktank/sharktank/kernels/: __init__.py  attention.py  attn_q8.py  base.py  batch_matmul_transpose_b.py  bitcast.py  conv_2d_nchw_fchw.py  einsum_2args_q4.py  mmt_axis_scaled_q8.py  mmt_block_scaled_offset_q4.py  mmt_block_scaled_q8.py  mmt_scaled_q8.py  mmt_super_block_scaled_offset_q4.py  mmtfp.py  pooling_nchw_sum.py  rotary.py
sharktank/sharktank/layers/: .causal_llm.py.swp  .ffn_moe_block.py.swp  .paged_llama_attention_block.py.swp  __init__.py  activations.py  attention_block.py  base.py  causal_llm.py  conv.py  ffn_block.py  ffn_moe.py  ffn_moe_block.py  kv_cache.py  linear.py  llama_attention_block.py  mixture_of_experts_block.py  mmdit.py  mmdit_double.py  modulation.py  norm.py  paged_llama_attention_block.py  rotary_embedding.py  sharding.py  testing.py  token_embedding.py
sharktank/sharktank/ops/: __init__.py  _registry.py  attention_impls.py  base.py  custom_impls.py  custom_kernel_impls.py  default_impls.py  mmt_block_scaled_offset_q4.py  mmt_block_scaled_q8.py  mmtfp.py  q_impls.py  qconv_impls.py  qlinear_impls.py  shape.py  sharded_impls.py  signatures.py
sharktank/sharktank/tools/: candidate_gen.py  compare_safetensors.py  dump_gguf.py  import_hf_dataset.py  upload_all_models_to_azure.py
sharktank/sharktank/types/: __init__.py  layout_utils.py  layouts.py  quantizers.py  sharding.py  tensors.py  theta.py
sharktank/sharktank/utils/: __init__.py  azure.py  cli.py  create_cache.py  debugging.py  export_artifacts.py  hf_datasets.py  io.py  iree.py  load_llm.py  logging.py  math.py  misc.py  patching.py  testing.py  tokenizer.py  tree.py  typing.py  vmfb_runner.py
sharktank/tests/: export_test.py
sharktank/tests/evaluate/: baseline_perplexity_scores.json  export_artifacts_test.py  perplexity.py  perplexity_iree_test.py  perplexity_test.py  perplexity_torch_test.py  perplexity_vmfb_test.py
sharktank/tests/examples/: main_test.py
sharktank/tests/kernels/: attn_q8_test.py  batch_matmul_transpose_b_test.py  conv_2d_nchw_fchw_test.py  einsum_q4_test.py  mmt_scaled_q8_test.py  (+7 more)
shortfin/: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  config.json  dev_me.py  mypy.ini  pyproject.toml  requirements-iree-compiler.txt  requirements-tests-nogil.txt  requirements-tests.txt  requirements.txt  setup.py  version.json
shortfin/build_tools/: build_linux_package.sh  iree_version.txt  python_lsan_suppressions.txt
shortfin/docs/: README.md  conf.py  index.rst  parameter_loading.rst  reference.rst  requirements.txt  serve_docs.sh
shortfin/python/: CMakeLists.txt  array_binding.cc  array_host_ops.cc  lib_ext.cc  lib_ext.h  utils.h
shortfin/src/: CMakeLists.txt  shortfin.ld
shortfin/tests/: amdgpu_system_test.py  conftest.py  host_cpu_system_test.py  local_scope_test.py
tuner/: .gitignore  README.md  candidate_gen.py  candidate_gen_test.py  generate_tuning_config.py  libtuner.py  libtuner_test.py  pyproject.toml  requirements-dev.txt  setup.py
tuner/punet/: compile_candidate.sh  punet.sh  punet_autotune.py
tuner/tuner/: __init__.py  candidate_gen.py  candidate_gen_test.py  common.py  common_test.py  dispatch_constraints.py  dispatch_constraints_test.py  dispatch_parser.py  dispatch_parser_test.py  libtuner.py  libtuner_test.py  op_matchers.py  spec_builder.py  spec_builder_test.py
(+558 files in other folders)
