[build-system]
requires = [
    "cmake>=3.29",
    "setuptools>=61.0",
    "wheel",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "requires_amd_gpu: tests that require and AMD GPU (deselect with '-m \"not requires_amd_gpu\"')",
]
testpaths = [
    "tests",
]
