[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shark-ai"
authors = [
  {name = "SHARK Authors"},
]
description = "SHARK AI meta package"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.10"
# Version is set via the `setup.py` and requirements are set via files below.
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/nod-ai/SHARK-Platform"

[project.optional-dependencies]
onnx = [
  "iree-base-compiler[onnx]",
]
apps = [
  "shortfin[apps]",
]

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
