[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharktank"
authors = [
  {name = "SHARK Authors"},
]
description = "SHARK layers and inference models for genai"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

# Version is set via the `setup.py` and requirements are set via files below.
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Repository = "https://github.com/nod-ai/shark-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["sharktank*"]
namespaces = true

[tool.setuptools.package-data]
sharktank = ["py.typed", "kernels/templates/*.mlir"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
testing = {file = ["requirements-tests.txt"]}

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
    "-m=unit",
]
markers = [
    "expensive: tests that are very expensive",
    "export: tests that require export from torch",
    "golden: tests that compare to some golden values",
    "integration: marks tests as integration, requiring access to network/models",
    "model_punet: tests specific to the punet model",
    "unit: unit tests requiring no out of repo resources",
]
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
    ".",
]
