[build-system]
requires = [
    "cmake>=3.29",
    "setuptools>=61.0",
    "wheel",
    "ninja",
    'typing-extensions ; python_version == "3.10" ',
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
