[build-system]
requires = [
    "cmake>=3.29",
    "setuptools>=61.0",
    "wheel",
    "ninja",
    'typing-extensions ; python_version == "3.10" ',
]
build-backend = "setuptools.build_meta"

[project]
name = "shortfin"
authors = [
  {name = "SHARK Authors"},
]
description = "SHARK inference library and serving engine"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.10"

# Version is set via the `setup.py`.
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/nod-ai/shark-ai"
Documentation = "https://shortfin.readthedocs.io/en/latest/"

[project.optional-dependencies]
apps = [
  "transformers",
  "dataclasses-json",
  "pillow",
  "fastapi",
  "uvicorn",
  "aiohttp",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
